--- a/src/main/resources/static/css/ranking.css
+++ b/src/main/resources/static/css/ranking.css
@@ -17,7 +17,8 @@ body {
     border-radius: 10px;
     box-shadow: 10px 10px 10px black;
     text-align: center;
-    padding: 10px
+    padding: 10px;
+    padding-bottom: 20px;
 }
 
 h1 {
